Recipe updated & fixed issues with tea